--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id "me.champeau.jmh" version "0.6.8"
+
 }
 
 group 'org.example'
@@ -12,8 +14,18 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
+    jmh 'org.openjdk.jmh:jmh-core:1.35'
+    jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.35'
 }
 
 test {
     useJUnitPlatform()
+}
+
+jmh {
+    duplicateClassesStrategy = DuplicatesStrategy.WARN
+    fork = 1
+    iterations = 1
+    warmupIterations = 1
 }
